removed exceptions that cannot be thrown from tests